# shared-minecraft-server

./: .gitignore  Cargo.toml  build.rs  post_build.rs  publish.cmd
src/: app.rs  autoupdate.rs  ddns.rs  error.rs  fetch.rs  local_storage.rs  main.rs  process.rs  public_ip.rs  pull_channel.rs  scene.rs  server_files.rs  transitions.rs  verify_signature.rs
src/app/: local_storage.rs  mod.rs  user.rs
src/app/backend/: backend_process.rs  mc_command.rs  mod.rs  server_repo.rs
src/app/backend/database/: local_files.rs  mod.rs
src/app/backend/database/git/: credentials.rs  error.rs  mod.rs
src/git/: credentials.rs  mod.rs  non_sync_mod.rs  status_reporter.rs
