[package]
name = "shared-minecraft-server"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.15.0"
directories = "4.0"

[dependencies.eframe]
version = "0.19.0"
features = ["dark-light", "persistence"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = 'abort'
