[package]
name = "shared-minecraft-server"
version = "1.0.2"
edition = "2021"

[dependencies]
git2 = "0.15.0"
directories = "4.0"
http_req = "0.9.0"

[dependencies.eframe]
version = "0.19.0"
features = ["dark-light", "persistence"]

[package.metadata.cargo-post.dependencies]
toml = "0.5.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 's'
lto = true
codegen-units = 1
strip = true
